-----------------------------

Version:    5.1

maintained by Ray Zimmerman <rz10@cornell.edu>

MATPOWER
$Id$
Copyright (c) 1996-2015 by Power System Engineering Research Center (PSERC)
See http://www.pserc.cornell.edu/matpower/ for more info.


Changes since 5.1
-----------------

10/15/15
    - Modified t_is() to handle matrix inputs of dimension greater
      than two.

9/23/15
    - Added code in cplex_options(), insolvablepfsos(),
      insolvablepfsos_limitQ() and yalmip_options() to turn off
      'MATLAB:lang:badlyScopedReturnValue' warning triggered by
      CPLEX when using Matlab R2015b (8.6) and later.

7/16/15
    - Added mpopt2qpopt() to provide common interface for creating
      options struct for mi/qps_matpower() from a MATPOWER options
      struct.
    - Changed default solver order for LP, QP, MILP, MIQP problems
      to move Gurobi before CPLEX and BPMPD after OT and GLPK.

7/9/15
    - Modified have_fcn() to return 0 and warn for unrecognized
      functionality, instead of producing fatal error.

6/19/15
    - Fixed a fatal bug in psse_convert_xfmr() affecting transformers
      with CW and/or CZ equal to 1. Thanks to Matthias Resch.

5/18/15
    - Fixed a crash in have_fcn() caused by changes in OPTI Toolbox
      v2.15 (or possibly v2.12).

4/24/15
    - Commented out isolated bus 10287 in case3375wp.m.

4/16/15
    - Added some caching to mpoption() and made minor changes to
      nested_struct_copy() to greatly decrease the overhead added by
      mpoption() when running many small problems.

4/14/15
    - Added experimental code to lay foundation for handling ZIP load
      model in power flow (Newton, fast-decoupled only), continuation
      power flow, and optimal power flow (MIPS, fmincon, Knitro, IPOPT
      solvers only). Currently, ZIP loads can only be specified on a
      system-wide basis using the experimental options
      'exp.sys_wide_zip_loads.pw' and 'exp.sys_wide_zip_loads.qw'.
      Tests in t/t_vdep_load().